--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 arrow==1.3.0
-caldav==1.3.9
-canvasapi==3.2.0
-certifi==2023.11.17
-charset-normalizer==3.3.2
+caldav==1.4.0
+canvasapi==3.3.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
 ConfigArgParse==1.7
-icalendar==5.0.11
-idna==3.6
-lxml==4.9.4
-python-dateutil==2.8.2
-pytz==2023.3.post1
-recurring-ical-events==2.1.2
-requests==2.31.0
-six==1.16.0
-types-python-dateutil==2.8.19.14
-tzlocal==5.2
-urllib3==2.1.0
-vobject==0.9.6.1
-x-wr-timezone==0.0.6
+icalendar==6.1.0
+idna==3.10
+lxml==5.3.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+recurring-ical-events==3.4.0
+requests==2.32.3
+six==1.17.0
+types-python-dateutil==2.9.0.20241206
+tzdata==2024.2
+urllib3==2.3.0
+vobject==0.9.9
+x-wr-timezone==2.0.0
