--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,4 @@
-arrow==1.3.0
-caldav==1.4.0
-canvasapi==3.3.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-ConfigArgParse==1.7
-icalendar==6.1.0
-idna==3.10
-lxml==5.3.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-recurring-ical-events==3.4.0
-requests==2.32.3
-six==1.17.0
-types-python-dateutil==2.9.0.20241206
-tzdata==2024.2
-urllib3==2.3.0
-vobject==0.9.9
-x-wr-timezone==2.0.0
+caldav~=2.2
+canvasapi~=3.4
+ConfigArgParse~=1.7
+pytz~=2025.2
